# GMv3-universal

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  LICENSE  README.md  SECURITY.md  SUPPORT.md  alembic.ini  docker-compose.coolify.yml  gm.py  nginx.conf  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-proprietary-universal.yml  release-proprietary-universal.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py
docs/: architecture.md  implementation_backlog.md  voice_ui_kit_migration.md
docs/voice_client/: 404.html  __next.__PAGE__.txt  __next._head.txt  __next._tree.txt  index.html  index.txt
gm_engine/app/: __init__.py  settings.py  settings_store.py
gm_engine/interaction/: bot_speaking_state.py  control_frames.py  control_processor.py  deepgram_stt.py  pipecat_adapter.py  pipecat_rlm_processor.py  pipecat_ws_serializer.py
gm_engine/knowledge/: embeddings.py  manager.py  null_store.py  qdrant_store.py  routed_store.py  store.py
gm_engine/llm/: codex_provider.py  openai_provider.py
gm_engine/logging/: events.py
gm_engine/prompts/: gm_prompts.json
gm_engine/rlm/: controller.py  types.py
gm_engine/state/: db.py  models.py  (+1 more)
scripts/: README_INSTALL.md  bootstrap.sh  build_proprietary.sh  build_proprietary_package.py  generate_release_notes.py  proprietary_entry.py  publish_to_github.sh  run_voice_gm.py  start_voice_ws.sh
ui-next/: package-lock.json  package.json
(+50 files in other folders)
